# mapae

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: deploy-docs.yaml  deploy-to-dockerhub.yml  test.yml
app/: config.py  dependencies.py  exceptions.py  main.py
app/db/: __init__.py
app/routers/: auth.py  health.py
app/schemas/: __init__.py  auth.py
app/services/: auth_service.py
app/smtp/: handler.py  parser.py  server.py  spf_check.py
app/utils/: logging.py
cmd/mapae/: main.go
internal/auth/: jwt_signer.go  jwt_signer_test.go  service.go  service_test.go
internal/config/: config.go  config_test.go
internal/logging/: logging.go
internal/storage/: store.go
internal/storage/memory/: client.go  client_test.go
internal/storage/redis/: client.go  client_test.go
internal/transport/http/: router.go  router_test.go
internal/transport/smtp/: server.go  server_test.go
internal/transport/smtp/parser/: parser.go  parser_test.go  stream.go  stream_test.go
